--- a/_posts/2018-06-22-esempio.md
+++ b/_posts/2018-06-22-esempio.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Battuta esempio"
 date:   2018-06-22
 excerpt: "Questa è una battuta di esempio"
-project: true
+project: false
 tag:
 - cippirimerlo 
 - marguati
