--- a/_posts/2018-06-22-asus.md
+++ b/_posts/2018-06-22-asus.md
@@ -8,4 +8,4 @@ comments: true
 ---
 
 ![](/assets/2018-06-22/asus.jpg)
-<audio src="/assets/2018-06-22/asus.m4a" controls preload></audio>
+<audio src="/assets/2018-06-22/asus.mp3" controls preload></audio>
