--- a/_posts/2018-06-22-pipi.md
+++ b/_posts/2018-06-22-pipi.md
@@ -7,4 +7,4 @@ tag:
 comments: true
 ---
 
-<audio src="/assets/2018-06-22/pipi.m4a" controls preload></audio>
+<audio src="/assets/2018-06-22/pipi.mp3" controls preload></audio>
