--- a/_posts/2018-06-22-rebus-001.md
+++ b/_posts/2018-06-22-rebus-001.md
@@ -11,7 +11,13 @@ Se dovessi arrenderti la soluzione è nel filename e se non sai cosa sia un file
 
 ![](/assets/2018-06-22/iaramadonna.jpg)
 
+<button id="pulsante">Clicca per la soluzione</button>
 <div id="spoiler" style="display: none;">
 Iaramadonna = Yara (Gambirasio) e la Madonna
 </div>
-<button onclick="document.getElementById('spoiler').style = 'block';">Clicca per la soluzione</button>
+
+<script>
+let touchEvent = 'ontouchstart' in window ? 'touchstart' : 'click';
+
+document.getElementById('pulsante').addEventListener(touchEvent, function() { document.getElementById('spoiler').style = 'block';});
+</script>
