--- a/_posts/2018-06-25-harvard.md
+++ b/_posts/2018-06-25-harvard.md
@@ -7,4 +7,4 @@ tag:
 comments: true
 ---
 
-"Harvard" <i class="fa fa-chevron-right"></i> "Hard (con una v al posto della d finale) hard (senza la h iniziale)" <i class="fa fa-chevron-right"></i> "Duro (con la v finale) duro (senza la lettera iniziale)" <i class="fa fa-chevron-right"></i> "Durovuro"
+"Harvard" <i class="fa fa-chevron-right"></i> "Hard (con una v al posto della d finale) hard (senza la h iniziale)" <i class="fa fa-chevron-right"></i> "Duro (con la v finale) duro (senza la lettera iniziale)" <i class="fa fa-chevron-right"></i> "Durvuro"
